@@ -16,6 +16,7 @@ longer included in any reports.
 - Update pre-reqs in Makefile.PL.
 - Chop benchmarks copied from docs for Set::Tiny.
 - Re-create html/setops.report.html.
+- Add repo https://github.com/ronsavage/Benchmark-Featureset-SetOps to docs and Makefie.PL.
 EOT
 
 [V 1.03]
